<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".ConversorKmToMillas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/titulo9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="bottom|center"
            android:text="@string/distancia"
            android:textSize="18sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/inputUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/calcularKmToM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/colorBoton"
            android:text="@string/calcularKmToM"
            app:cornerRadius="5dp" />


        <Button
            android:id="@+id/calcularMtoKm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/colorBoton"
            android:text="@string/calcularMtoKm"
            app:cornerRadius="5dp" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="8"
            android:gravity="center|top"
            android:textSize="20sp" />

        <Button
            android:id="@+id/regresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBoton"
            android:text="@string/regresar"
            app:cornerRadius="5dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>